Replace blog with YT channel

--- a/APM-Final-v16/src/app/home/welcome.component.html
+++ b/APM-Final-v16/src/app/home/welcome.component.html
@@ -17,7 +17,7 @@
 
       <div class="text-center">@deborahkurata</div>
       <div class="text-center">
-        <a href="http://www.bit.ly/DeborahKsBlog">www.bit.ly/DeborahKsBlog</a>
+        <a href="https://youtube.com/@deborah_kurata">Deborah's YouTube Channel</a>
       </div>
     </div>
   </div>
